// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="HomePage"
  >
    <div
      class="container-fluid text-center"
    >
      <h1
        class="mt-3 mb-3"
      >
        Jobly
      </h1>
      <h4>
        Welcome back 
      </h4>
    </div>
  </div>
</DocumentFragment>
`;

exports[`matches snapshot when logged out 1`] = `
<DocumentFragment>
  <div
    class="HomePage"
  >
    <div
      class="container-fluid text-center"
    >
      <h1
        class="mt-3 mb-3"
      >
        Jobly
      </h1>
      <h4
        class="mb-4"
      >
        All the jobs in one, convenient place.
      </h4>
      <button
        class="btn btn-lg btn-info fw-bold me-3"
        type="button"
      >
        Login
      </button>
      <button
        class="btn btn-lg btn-info fw-bold"
        type="button"
      >
        Signup
      </button>
    </div>
  </div>
</DocumentFragment>
`;
